--- a/Languages/Japanese/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/Japanese/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -4,15 +4,15 @@
   <!--EN: knowledge-->
   <Knowledge.label>知識</Knowledge.label>
   <!--EN: neolithic-->
-  <Neolithic.label>石器時代</Neolithic.label>
+  <Neolithic.label>新石器時代</Neolithic.label>
   <!--EN: medieval-->
   <Medieval.label>中世時代</Medieval.label>
   <!--EN: industrial-->
-  <Industrial.label>産業時代</Industrial.label>
+  <Industrial.label>産業化時代</Industrial.label>
   <!--EN: spacer-->
   <Spacer.label>宇宙時代</Spacer.label>
   <!--EN: ultra-->
-  <Ultra.label>ウルトラ時代</Ultra.label>
+  <Ultra.label>超先端時代</Ultra.label>
   <!--EN: archotech-->
   <Archotech.label>アルコテック</Archotech.label>
 
