--- a/Languages/Japanese/Keyed/HumanResources_keys.xml
+++ b/Languages/Japanese/Keyed/HumanResources_keys.xml
@@ -14,17 +14,19 @@
   <!--EN: Show melee weapons.-->
   <ShowMelee>近接武器を表示</ShowMelee>
   <!--EN: Show ranged weapons.-->
-  <ShowRanged>遠隔武器を表示</ShowRanged>
+  <ShowRanged>遠距離武器を表示</ShowRanged>
   <!--EN: Show techs available to learn.-->
   <ShowAvailable>学習できるテクノロジーを表示</ShowAvailable>
   <!--EN: Compact view.-->
   <ShowCompact>縮小表示</ShowCompact>
-  
-  <!--NEW--><ShowAssignment>Show assignments.</ShowAssignment>
-  <!--NEW--><ClearAssignments>Clear ALL assignments.</ClearAssignments>
-  <!--NEW--><GroupBySkills>Group by skills</GroupBySkills>
-  <!--NEW--><ClickToGroupAssign>Assign all these technologies at once.</ClickToGroupAssign>
-  
+  <!--EN: Show assignments.-->
+  <ShowAssignment>課されている任務を表示</ShowAssignment>
+  <!--EN: Clear ALL assignments.-->
+  <ClearAssignments>課されている任務を全部取り消します。</ClearAssignments>
+  <!--EN: Group by skills-->
+  <GroupBySkills>スキル別で分類</GroupBySkills>
+  <!--EN: Assign all these technologies at once.-->
+  <ClickToGroupAssign>ここにある全てのテクノロジーの任務を課します。</ClickToGroupAssign>
   <!--EN: Expand-->
   <Expand>展開</Expand>
   <!--EN: Collapse-->
@@ -32,18 +34,35 @@
   <!--EN: Catalog-->
   <TabCatalogue>目録</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
-  <AvailableBooksReport>{1}台の本棚に{0}冊の本</AvailableBooksReport>
+  <AvailableBooksReport>{1} 台の本棚に {0} 冊の本</AvailableBooksReport>
+  <!--EN: {0} technologies online-->
+  <AvailableOnNetwork>オンラインサーバにテクノロジーが {0} 種類ある</AvailableOnNetwork>
+  <!--EN: Left-click to assign for studying.-->
+  <ClickToAssignForStudying>左クリックすると、このテクノロジーを学習することを命じます。</ClickToAssignForStudying>
+  <!--EN: Left-click to assign for documentation.-->
+  <ClickToAssignForDocumentation>左クリックすると、このテクノロジーを文書化あるいは入力することを命じます。</ClickToAssignForDocumentation>
+  <!--EN: Left-click to unassign.-->
+  <ClickToUnassign>左クリックすると、このテクノロジーの任務を取り消します。</ClickToUnassign>
   <!--EN: Right-click to show on Research Tree.-->
-  <RightClickToTree>右クリックすると、研究ツリーが表示されます。</RightClickToTree>
+  <RightClickToTree>右クリックすると、このテクノロジーを研究ツリーにて表示されます。</RightClickToTree>
+  <!--EN: {0} is tasked with:-->
+  <AssignedTo>{0} は、次の任務を課されています：</AssignedTo>
+  <!--EN: {0} is tasked with researching this.-->
+  <AssignedToResearch>{0} は、このテクノロジーを研究するように命じられています。</AssignedToResearch>
+  <!--EN: {0} is tasked with studying this.-->
+  <AssignedToStudy>{0} は、このテクノロジーを学習するように命じられています。</AssignedToStudy>
+  <!--EN: {0} is tasked with documenting this.-->
+  <AssignedToDocument>{0} は、このテクノロジーを文書化あるいは入力するように命じられています。</AssignedToDocument>
+  <!--EN: click to remove-->
+  <ClickToRemove>左クリックで外す</ClickToRemove>
+  <!--EN: Starting knowledge for {0}.-->
+  <!--"0" here is either the scenario or the player faction's name-->
+  <bookFromStart>{0} の初期テクノロジー</bookFromStart>
+  <!--EN: Archived in our library.-->
+  <bookInLibrary>図書館で保存されている</bookInLibrary>
+  <!--EN: Archived in our database.-->
+  <bookInDatabase>データベースで保存されている</bookInDatabase>
   
-  <!--NEW--><ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
-  <!--NEW--><ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
-  <!--NEW--><ClickToUnassign>Left-click to unassign.</ClickToUnassign>
-  <!--NEW--><AssignedTo>{0} is tasked with:</AssignedTo>
-  <!--NEW--><AssignedToResearch>{0} is tasked with researching this.</AssignedToResearch>
-  <!--NEW--><AssignedToStudy>{0} is tasked with studying this.</AssignedToStudy>
-  <!--NEW--><AssignedToDocument>{0} is tasked with documenting this.</AssignedToDocument>
-  <!--NEW--><ClickToRemove>click to remove</ClickToRemove>
   
   <!--Settings-->
   
@@ -51,28 +70,24 @@
   <TechPoolModeTitle>入植者の初期テクノロジーを決めるのは…</TechPoolModeTitle>
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
   <TechPoolModeDesc>プレーヤー派閥の入植者が作成される時、その身に付くテクノロジーを抽選するプールを設定します。</TechPoolModeDesc>
-  
-  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
-  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
-  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
-  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
-  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
-  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
-  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
-  <!--NEW--><TechPoolMinimumDefaultMsg>They must know something!</TechPoolMinimumDefaultMsg>
-
-  <!--OLD-->
-  <!--EN: both faction settings-->
-  <!--<TechPoolMode_Both>下記両方</TechPoolMode_Both>-->
-  <!--EN: the faction's tech level only-->
-  <!--<TechPoolMode_TechLevel>プレーヤー派閥のテクノロジーレベル</TechPoolMode_TechLevel>-->
-  <!--EN: the starting techs for that faction only-->
-  <!--<TechPoolMode_Starting>プレーヤー派閥の初期テクノロジー</TechPoolMode_Starting>-->
-  <!--EN: Also include starting research parts from the scenario.-->
-  <!--<TechPoolIncludesScenarioTitle>シナリオで設定された初期テクノロジーも含みます。</TechPoolIncludesScenarioTitle>-->
-  
+  <!--EN: ...the faction's default starting techs-->
+  <TechPoolIncludesStartingTitle>...プレーヤー派閥の既定初期テクノロジー</TechPoolIncludesStartingTitle>
+  <!--EN: If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.-->
+  <TechPoolIncludesStartingDesc>これを選択すると、プレーヤー派閥の既定の初期テクノロジーは抽選プールに含まれます。</TechPoolIncludesStartingDesc>
+  <!--EN: ...the faction's tech level-->
+  <TechPoolIncludesTechLevelTitle>...プレーヤー派閥のテクノロジーレベル</TechPoolIncludesTechLevelTitle>
+  <!--EN: If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.-->
+  <TechPoolIncludesTechLevelDesc>これを選択すると、プレーヤー派閥のテクノロジーレベルにある全てのテクノロジーは抽選プールに含まれます。</TechPoolIncludesTechLevelDesc>
+  <!--EN: ...the pawn's background-->
+  <TechPoolIncludesBackgroundTitle>...本人のバックストーリー</TechPoolIncludesBackgroundTitle>
+  <!--EN: If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!-->
+  <TechPoolIncludesBackgroundDesc>これを選択すると、キャラクターのバックストーリーは初期テクノロジーを影響します。そうすれば、キャラクターの得意分野は個人伝記により近くなりますが、プレーヤー派閥のテクノロジーレベルから乖離する恐れもあります。面白そうけど！</TechPoolIncludesBackgroundDesc>
+  <!--EN: ...the scenario starting research-->
+  <TechPoolIncludesScenarioTitle>...シナリオで設定された初期テクノロジー</TechPoolIncludesScenarioTitle>
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
-  <TechPoolIncludesScenarioDesc>これをチェックすると、あなたがシナリオに追加したテクノロジーも抽選プールに含まれます。</TechPoolIncludesScenarioDesc>
+  <TechPoolIncludesScenarioDesc>これを選択すると、あなたがシナリオに追加したテクノロジーも抽選プールに含まれます。</TechPoolIncludesScenarioDesc>
+  <!--EN: They must know something!-->
+  <TechPoolMinimumDefaultMsg>何も知らないわけがない！</TechPoolMinimumDefaultMsg>
   <!--EN: Combat specialists start with weapons from...-->
   <WeaponPoolModeTitle>戦闘専門家が最初から使える武器を決めるのは…</WeaponPoolModeTitle>
   <!--EN: Defines the pool from which to draw weapons proficiency for the player's colonists who are expert shooters or brawlers when they are created.-->
@@ -86,25 +101,32 @@
   <!--EN: All colonists start with scenario weapons.-->
   <FreeScenarioWeaponsTitle>全入植者はシナリオで設定された初期武器を最初から使えます。</FreeScenarioWeaponsTitle>
   <!--EN: If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use. (The vanilla "Rich Explorer" scenario was patched to always do this, regardless of what's chosen here)-->
-  <FreeScenarioWeaponsDesc>これをチェックすると、あなたがシナリオに追加した武器は、全ての入植者が最初から使えます。（バニラシナリオの「リッチ エクスプローラー」は既にパッチされ、本項のチェックの有無に関わらず、本オプションを有効にしています）</FreeScenarioWeaponsDesc>
-  
-  <!--NEW--><LearnMeleeWeaponsByGroupTitle>Learn melee weapons by group.</LearnMeleeWeaponsByGroupTitle>
-  <!--NEW--><LearnMeleeWeaponsByGroupDesc>When learning melee weapons, learn all weapons unlocked by that technology at the same time.</LearnMeleeWeaponsByGroupDesc>
-  <!--NEW--><LearnRangedWeaponsByGroupTitle>Learn ranged weapons by group.</LearnRangedWeaponsByGroupTitle>
-  <!--NEW--><LearnRangedWeaponsByGroupDesc>When learning ranged weapons, learn all weapons unlocked by that technology at the same time.</LearnRangedWeaponsByGroupDesc>
-  <!--NEW--><RequireTrainingForSingleUseWeaponsTitle>Require training for single-use weapons.</RequireTrainingForSingleUseWeaponsTitle>
-  <!--NEW--><RequireTrainingForSingleUseWeaponsDesc>If checked, weapons like rocket launchers will also require the pawn to be proficient with them before equipping.</RequireTrainingForSingleUseWeaponsDesc>
-  <!--NEW--><EnableJoyGiverTitle>Use training facilities for fun.</EnableJoyGiverTitle>
-  <!--NEW--><EnableJoyGiverDesc>Pawns will go practice at the target stand and training dummy just to blow off some steam.</EnableJoyGiverDesc>
-
+  <FreeScenarioWeaponsDesc>これを選択すると、あなたがシナリオに追加した武器は、全ての入植者が最初から使えます。（バニラシナリオの「リッチ エクスプローラー」は既にパッチされ、本項の選択の有無に関わらず、本オプションを有効にしています）</FreeScenarioWeaponsDesc>
+  <!--EN: Learn melee weapons by group.-->
+  <LearnMeleeWeaponsByGroupTitle>近接武器をグループで一括学習</LearnMeleeWeaponsByGroupTitle>
+  <!--EN: When learning melee weapons, learn all weapons unlocked by that technology at the same time.-->
+  <LearnMeleeWeaponsByGroupDesc>ある近接武器を学習したら、この武器が属するテクノロジーの下にある他の武器も同時に学習済みの状態になります。</LearnMeleeWeaponsByGroupDesc>
+  <!--EN: Learn ranged weapons by group.-->
+  <LearnRangedWeaponsByGroupTitle>遠距離武器をグループで一括学習</LearnRangedWeaponsByGroupTitle>
+  <!--EN: When learning ranged weapons, learn all weapons unlocked by that technology at the same time.-->
+  <LearnRangedWeaponsByGroupDesc>ある遠距離武器を学習したら、この武器が属するテクノロジーの下にある他の武器も同時に学習済みの状態になります。</LearnRangedWeaponsByGroupDesc>
+  <!--EN: Require training for single-use weapons.-->
+  <RequireTrainingForSingleUseWeaponsTitle>使い捨ての武器にも訓練が必要</RequireTrainingForSingleUseWeaponsTitle>
+  <!--EN: If checked, weapons like rocket launchers will also require the pawn to be proficient with them before equipping.-->
+  <RequireTrainingForSingleUseWeaponsDesc>これを選択すると、1回限りの武器（三連装ロケットランチャーなど）も訓練しないと装備できません。</RequireTrainingForSingleUseWeaponsDesc>
+  <!--EN: Use training facilities for fun.-->
+  <EnableJoyGiverTitle>娯楽のために訓練設備を使用</EnableJoyGiverTitle>
+  <!--EN: Pawns will go practice at the target stand and training dummy just to blow off some steam.-->
+  <EnableJoyGiverDesc>入植者は鬱憤を晴らすために、標的と訓練用人形にて練習をします。</EnableJoyGiverDesc>
   <!--EN: Difficulty settings slows down research.-->
   <ResearchSpeedTiedToDifficultyTitle>難易度は研究速度に影響します。</ResearchSpeedTiedToDifficultyTitle>
   <!--EN: If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 30% slower on Hard. If unchecked, it defaults to 10% slower than vanilla.-->
-  <ResearchSpeedTiedToDifficultyDesc>これをチェックすると、基本研究速度は難易度によって決められ、Easyの場合はバニラと変わりませんが、Hardの場合は30%下げられます。これをチェックしないと、基本研究速度はバニラと比べて10%下げられます。</ResearchSpeedTiedToDifficultyDesc>
+  <ResearchSpeedTiedToDifficultyDesc>これを選択すると、基本研究速度は難易度によって決められ、Easyの場合はバニラと変わりませんが、Hardの場合は30%下げられます。選択しない場合、基本研究速度はバニラと比べて10%下げられます。</ResearchSpeedTiedToDifficultyDesc>
   <!--EN: Difficulty settings slows down tech studying.</-->
   <StudySpeedTiedToDifficultyTitle>難易度は学習速度に影響します。</StudySpeedTiedToDifficultyTitle>
   <!--EN: If checked, the base speed for studying new techs is tied to the difficulty settings, dropping 10% on Medium up to 20% on hard.-->
-  <StudySpeedTiedToDifficultyDesc>これをチェックすると、基本学習速度は難易度に影響を受けます。Mediumの場合は10%、Hardの場合は20%下げられます。</StudySpeedTiedToDifficultyDesc>
+  <StudySpeedTiedToDifficultyDesc>これを選択すると、基本学習速度は難易度に影響を受けます。Mediumの場合は10%、Hardの場合は20%下げられます。</StudySpeedTiedToDifficultyDesc>
+
 
   <!--Things-->
   
@@ -130,7 +152,20 @@
   <BookTheory>{0} の理論</BookTheory>
   <!--EN: {0} Database-->
   <BookDatabase>{0} のデータベース</BookDatabase>
-
+  <!--EN: Base technology-->
+  <WeaponAssociatedTech>基礎テクノロジー</WeaponAssociatedTech>
+  <!--EN: The knowledge a colony (or colonist) needs in order to learn how to use this weapon.-->
+  <WeaponAssociatedTechDesc>この武器の使い方を学ぶに必要な知識。\n\n（全ての入植者は、同テクノロジーがコロニーの本棚やデータベースに保存されれば、同武器を練習できる。一人ひとりでテクノロジーを学習する必要はない）</WeaponAssociatedTechDesc>
+  <!--EN: Known?-->
+  <WeaponKnown>既知？</WeaponKnown>
+  <!--EN: Whether the colony has the necessary knowledge for its members to craft and learn how to use this weapon.-->
+  <WeaponKnownDesc>コロニーがこの武器の使い方と作る方に関するテクノロジーを保有しているか。</WeaponKnownDesc>
+  <!--EN: Requires training?-->
+  <WeaponRequiresTraining>要訓練？</WeaponRequiresTraining>
+  <!--EN: Whether this weapon requires training to be used.-->
+  <WeaponRequiresTrainingDesc>この武器を使うには訓練が必要か。</WeaponRequiresTrainingDesc>
+  
+  
   <!--Feedback-->
   
   <!--EN: {0_nameDef} has learned the secrets of {1}.-->
@@ -147,11 +182,10 @@
   <NothingToAddToLibrary>{0_nameFull} は何も知らないようです。</NothingToAddToLibrary>
   <!--EN: {0_nameDef} has read all the books.-->
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} は全ての本を読破しました。</AlreadyKnowsTheWholeLibrary>
-
-  <!--NEW--><NoSpaceInLibrary>Nowhere to store the book when it's finished.</NoSpaceInLibrary>
-
   <!--EN: {0_nameDef} is missing basic knowledge on those subjects.-->
   <LacksFundamentalKnowledge>{0_nameDef} は、これらの課題の前置き知識を知りません。</LacksFundamentalKnowledge>
+  <!--EN: Nowhere to store the book when it's finished.-->
+  <NoSpaceInLibrary>この本が完成しても、保管できる本棚がありません。</NoSpaceInLibrary>
   <!--EN: No available weapons to train.-->
   <NoWeaponsFoundToLearn>練習できる武器はありません。</NoWeaponsFoundToLearn>
   <!--EN: {0_nameDef} has no corresponding knowledge or books to learn about {1}.-->
@@ -168,24 +202,41 @@
   <DoesntKnowHowToCraft>{0_nameDef} は「{1}」を完成させる方法が分かりません（{2} の知識が必要）。</DoesntKnowHowToCraft>
   <!--EN: {0_nameDef} doesn't know how to cultivate {1} (requires {2}).-->
   <DoesntKnowThisPlant>{0_nameDef} は {1} を植える方法が分かりません（{2} の知識が必要）。</DoesntKnowThisPlant>
-
-  <!--CHANGED--><!--EN: Pawn has not been trained to use this weapon-->
-  <UnknownWeapon>{0_nameDef} はまだこの武器の訓練を十分に受けていません。</UnknownWeapon>
-  <!--CHANGED--><!--EN: Pawn cannot comprehend this weapon and is scared of it-->
-  <EvilWeapon>{0_nameDef} はこの武器が邪悪だと思い込んでおり、それを触りません。</EvilWeapon>
-  
+  <!--EN: Pawn has not been trained to use this weapon-->
+  <UnknownWeapon>このキャラクターはまだこの武器の訓練を十分に受けていません。</UnknownWeapon>
+  <!--EN: Pawn cannot comprehend this weapon and is scared of it-->
+  <EvilWeapon>このキャラクターはこの武器を理解できず、怖がっています。</EvilWeapon>
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} は既知です。</TechAlreadyKnown>
-
-  <!--NEW--><NoWeaponEquipped>Invalid equipment.</NoWeaponEquipped>
+  <!--EN: Invalid equipment.-->
+  <NoWeaponEquipped>無効な武器装備。</NoWeaponEquipped>
+  <!--EN: No books to scan.-->
+  <NoBooksToScan>スキャンできる本はありません。</NoBooksToScan>
+  <!--EN: No servers available on the colony network.-->
+  <NoAvailableServer>コロニーのネットワークにサーバがありません。</NoAvailableServer>
+  <!--EN: Assigned projects not allowed here.-->
+  <ForbiddenAssignment>課されたテクノロジーの任務が、ここではできません。</ForbiddenAssignment>
+  <!--EN: {0_nameDef} was not assigned any projects. Use the main Research tab.-->
+  <NoAssignment>{0_nameDef} は研究任務を課されていません。「研究」メニューで指定してください。</NoAssignment>
+  <!--EN: Requires an unobstructed line of sight.-->
+  <ShootingRangeObstructed>障害物のない視線が必要です。</ShootingRangeObstructed>
+  
 
   <!--weapon testing -->
-  <!--NEW--><WeaponTestFail>{0_nameDef} couldn't figure out how {1_definite} works.</WeaponTestFail>
-  <!--NEW--><FearedWeapon>{0_nameDef} has tried these weapons before with bad results.</FearedWeapon>
-  <!--NEW--><LetterLabelWeaponTestFailed>Accident with {WEAPON}</LetterLabelWeaponTestFailed>
-  <!--NEW--><MessageWeaponTestFailureMinor>{TESTER_labelShort} has damaged {WEAPON_definite} while trying to use it ({RECIPE_label}).</MessageWeaponTestFailureMinor>
-  <!--NEW--><MessageWeaponTestFailureCatastrophic>{TESTER_labelShort} suffered an accident while trying to use {WEAPON_definite} and sustained an injury ({RECIPE_label}).</MessageWeaponTestFailureCatastrophic>
-  <!--NEW--><MessageMedicalWeaponTestFailureRidiculous>{TESTER_labelShort} totally botched it while trying to use {WEAPON_definite}. {TESTER_pronoun} is injured and the weapon, destroyed. ({RECIPE_label}).</MessageMedicalWeaponTestFailureRidiculous>
+  
+  <!--EN: {0_nameDef} couldn't figure out how {1_definite} works.-->
+  <WeaponTestFail>{0_nameDef} は {1_definite} の使い方を見つけ出せませんでした。</WeaponTestFail>
+  <!--EN: {0_nameDef} has tried these weapons before with bad results.-->
+  <FearedWeapon>{0_nameDef} はかつてこれらの武器を試用しようとしましたが、失敗しました。</FearedWeapon>
+  <!--EN: Accident with {WEAPON}-->
+  <LetterLabelWeaponTestFailed>{WEAPON} で起きた事故</LetterLabelWeaponTestFailed>
+  <!--EN: {TESTER_labelShort} has damaged {WEAPON_definite} while trying to use it ({RECIPE_label}).-->
+  <MessageWeaponTestFailureMinor>{TESTER_labelShort} は {WEAPON_definite} を試用していた時、同武器を傷つけました（{RECIPE_label}）。</MessageWeaponTestFailureMinor>
+  <!--EN: {TESTER_labelShort} suffered an accident while trying to use {WEAPON_definite} and sustained an injury ({RECIPE_label}).-->
+  <MessageWeaponTestFailureCatastrophic>{TESTER_labelShort} は {WEAPON_definite} を試用していた時に事故を起こし、負傷してしまいました（{RECIPE_label}）。</MessageWeaponTestFailureCatastrophic>
+  <!--EN: {TESTER_labelShort} totally botched it while trying to use {WEAPON_definite}. {TESTER_pronoun} is injured and the weapon, destroyed. ({RECIPE_label}).-->
+  <MessageMedicalWeaponTestFailureRidiculous>{TESTER_labelShort} が {WEAPON_definite} を試用する努力は完全に失敗してしまいました。{TESTER_pronoun} が負傷し、同武器も壊れました（{RECIPE_label}）。</MessageMedicalWeaponTestFailureRidiculous>
+
 
   <!--Go Explore-->
   
@@ -195,7 +246,5 @@
   <LetterResearchRequest_TriumphHR>研究は大成功でした！共同作業により、あなたが大きな進歩を遂げ、{2} の秘密を解明しました。\n\n{0} との関係が {1} 上がりました。</LetterResearchRequest_TriumphHR>
   <!--EN: {0}, your researcher, acquired valuable expertise in {1} and gained {2} intellectual experience.-->
   <ResearchRequestXPGainHR>あなたの研究者 {0} は、{1} における貴重な専門知識を身に付け、{2} 点の知力経験値を得ました。</ResearchRequestXPGainHR>
-
-  <!--MISSING:-->
 
 </LanguageData> 
