--- a/Languages/French/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/French/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <!--EN: knowledge-->
-  <Knowledge.label>connaissance</Knowledge.label>
+  <Knowledge.label>Connaissances</Knowledge.label>
   <!--EN: neolithic-->
   <Neolithic.label>néolithique</Neolithic.label>
   <!--EN: medieval-->
