--- a/Languages/French/DefInjected/ThingDef/Things.xml
+++ b/Languages/French/DefInjected/ThingDef/Things.xml
@@ -7,8 +7,8 @@
   <StudyDesk.description>Un bureau pour étudier et rechercher les technologies. Pré-équipé avec toutes les recherches de départ de votre faction.</StudyDesk.description>
 
   <!--NEW-->
-  <NetworkTerminal.label>Network Terminal</NetworkTerminal.label>
-  <NetworkTerminal.description>An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.</NetworkTerminal.description>
+  <NetworkTerminal.label>Terminal réseau</NetworkTerminal.label>
+  <NetworkTerminal.description>Un point d'accès aux connaissances d'entrée et de sortie entre les colons et la base de données. Livré avec solitaire pré-installé.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
   <BookShelf.label>Bibliothèque</BookShelf.label>
@@ -16,12 +16,12 @@
   <BookShelf.description>Une étagère solide pour y ranger des connaissances sous forme de livres.</BookShelf.description>
 
   <!--NEW-->
-  <NetworkServer.label>Network Server</NetworkServer.label>
-  <NetworkServer.description>The ultimate cloud storage unit to host your research database. All library space you'll ever need.</NetworkServer.description>
+  <NetworkServer.label>Serveur réseau</NetworkServer.label>
+  <NetworkServer.description>L'unité de stockage cloud ultime pour héberger votre base de données. Tout l'espace de bibliothèque dont vous aurez besoin.</NetworkServer.description>
 
   <!--NEW-->
-  <TechDrive.label>Technology Database Drive</TechDrive.label>
-  <TechDrive.description>A hard drive filled with knowledge. Can only be archived on a network terminal.</TechDrive.description>
+  <TechDrive.label>Lecteur de base de données technologique</TechDrive.label>
+  <TechDrive.description>Un disque dur rempli de connaissances. Ne peut être archivé que sur un terminal réseau.</TechDrive.description>
 
   <!--EN: Unfinished technical book-->
   <UnfinishedTechBook.label>Livre technique inachevé</UnfinishedTechBook.label>
