--- a/Languages/French/Keyed/HumanResources_keys.xml
+++ b/Languages/French/Keyed/HumanResources_keys.xml
@@ -6,7 +6,7 @@
   <!--EN: Tech-->
   <TabKnowledge>Technologie</TabKnowledge>
   <!--EN: Knowledge-->
-  <TabKnowledgeTitle>Connaissance</TabKnowledgeTitle>
+  <TabKnowledgeTitle>Connaissances</TabKnowledgeTitle>
   <!--EN: Weapons Proficiency-->
   <TabKnowledgeWeapons>Habileté au maniement des armes</TabKnowledgeWeapons>
   <!--EN: Show common weapons.-->
@@ -22,8 +22,9 @@
   <!--EN: Show Assignments.-->
   <ShowAssignment>Voir les affectations..</ShowAssignment>
   <!--NEW--><ClearAssignments>Clear ALL assignments.</ClearAssignments>
-  <!--NEW--><GroupBySkills>Group by skills</GroupBySkills>
-  <!--NEW--><ClickToGroupAssign>Assign all these technologies at once.</ClickToGroupAssign>
+	<ClearAssignments>Effacez TOUTES les affectations.</ClearAssignments>
+  <GroupBySkills>Regrouper par compétences</GroupBySkills>
+ <ClickToGroupAssign>Attribuez toutes ces technologies à la fois.</ClickToGroupAssign>
   <!--EN: Expand-->
   <Expand>Étendre</Expand>
   <!--EN: Collapse-->
@@ -32,7 +33,7 @@
   <TabCatalogue>Catalogue</TabCatalogue>
   <!--EN: {0} books in {1} shelves-->
   <AvailableBooksReport>{0} livre(s) dans {1} étagère(s)</AvailableBooksReport>
-  <!--NEW--><AvailableOnNetwork>{0} technologies online</AvailableOnNetwork>
+  <AvailableOnNetwork>{0} technologies en ligne</AvailableOnNetwork>
   <!--EN: Left-click to assign for studying.-->
   <ClickToAssignForStudying>Clic-gauche pour affecter à l'étude.</ClickToAssignForStudying>
   <!--EN: Left-click to assign for documentation.-->
@@ -51,10 +52,10 @@
   <AssignedToDocument>{0} est affectée à la documentation de ceci.</AssignedToDocument>
   <!--EN: click to remove-->
   <ClickToRemove>Clic-gauche pour retirer.</ClickToRemove>
-  <!--NEW--><bookFromStart>Starting knowledge for {0}.</bookFromStart>
+  <bookFromStart>Début des connaissances pour {0}.</bookFromStart>
   <!--"0" here is either the scenario or the player faction's name-->
-  <!--NEW--><bookInLibrary>Archived in our library.</bookInLibrary>
-  <!--NEW--><bookInDatabase>Archived in our database.</bookInDatabase>
+  <bookInLibrary>Archivé dans notre bibliothèque.</bookInLibrary>
+  <bookInDatabase>Archivé dans notre base de données.</bookInDatabase>
 
   <!--Settings-->
   
@@ -126,11 +127,11 @@
   <!--EN: Retrieve Book-->
   <BookStoreRetrieveBook>Récupérer le livre</BookStoreRetrieveBook>
   <!--EN: Find and remove a particular book from the book shelf.-->
-  <BookStoreRetrieveBookDesc>Aller chercher un livre particulier dans la bibliothèque.</BookStoreRetrieveBookDesc>
+  <BookStoreRetrieveBookDesc>Aller chercher un livre en particulier dans la bibliothèque.</BookStoreRetrieveBookDesc>
   <!--EN: {0} doesn't fit at any book shelf.-->
   <BookStoreNoInternalStorage>{0} ne rentre dans aucune étagère.</BookStoreNoInternalStorage>
   <!--EN: {0} knowledge-->
-  <KnowledgeLabel>connaissance de {0}</KnowledgeLabel>
+  <KnowledgeLabel>{0}</KnowledgeLabel>
   <!--EN: Book of {0}-->
   <Book>Livre de {0}</Book>
   <!--EN: {0} Compendium-->
@@ -141,12 +142,12 @@
   <BookTheory>Théorie sur {0}</BookTheory>
   <!--EN: {0} Database-->
   <BookDatabase>Base de données de {0}</BookDatabase>
-  <!--NEW--><WeaponAssociatedTech>Base technology</WeaponAssociatedTech>
-  <!--NEW--><WeaponAssociatedTechDesc>The knowledge a colony (or colonist) needs in order to learn how to use this weapon.</WeaponAssociatedTechDesc>
-  <!--NEW--><WeaponKnown>Known?</WeaponKnown>
-  <!--NEW--><WeaponKnownDesc>Whether the colony has the necessary knowledge for its members to craft and learn how to use this weapon.</WeaponKnownDesc>
-  <!--NEW--><WeaponRequiresTraining>Requires training?</WeaponRequiresTraining>
-  <!--NEW--><WeaponRequiresTrainingDesc>Whether this weapon requires training to be used.</WeaponRequiresTrainingDesc>
+  <WeaponAssociatedTech>Technologie de base</WeaponAssociatedTech>
+  <WeaponAssociatedTechDesc>Les connaissances dont une colonie (ou un colon) a besoin pour apprendre à utiliser cette arme.</WeaponAssociatedTechDesc>
+  <WeaponKnown>Connu?</WeaponKnown>
+  <WeaponKnownDesc>Si la colonie a les connaissances nécessaires pour que ses membres puissent fabriquer et apprendre à utiliser cette arme.</WeaponKnownDesc>
+  <WeaponRequiresTraining>Nécessite une formation?</WeaponRequiresTraining>
+  <WeaponRequiresTrainingDesc>Est-ce que cette arme nécessite une formation pour être utilisée ?.</WeaponRequiresTrainingDesc>
 
   <!--Feedback-->
   
@@ -155,9 +156,9 @@
   <!--EN: {0_nameDef} wrote a book on {1}.-->
   <MessageDocumentComplete>{0_nameDef} a écrit un livre sur {1}.</MessageDocumentComplete>
   <!--EN: The knowledge for {0} was added to our library.-->
-  <MessageFiledTech>La connaissance de {0} a été ajoutée à notre bibliothèque.</MessageFiledTech>
+  <MessageFiledTech>La connaissance de {0} a été ajouté à notre bibliothèque.</MessageFiledTech>
   <!--EN: The knowledge for {0} was removed from our library.-->
-  <MessageEjectedTech>La connaissance de {0} a été retirée de notre bibliothèque.</MessageEjectedTech>
+  <MessageEjectedTech>La connaissance de {0} a été retiré de notre bibliothèque.</MessageEjectedTech>
   <!--EN: {0_nameDef} has mastered the {1_definite}.-->
   <MessageTrainingComplete>{0_nameDef} a maitrisé {1_definite}.</MessageTrainingComplete>
   <!--EN: You know nothing, {0_nameFull}.-->
@@ -165,11 +166,11 @@
   <!--EN: {0_nameDef} has read all the books.-->
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} a déjà lu tous les livres</AlreadyKnowsTheWholeLibrary>
   <!--EN: Nowhere to store the book when it's finished.-->
-  <NoSpaceInLibrary>Nulle part où ranger le livre quand il est fini.</NoSpaceInLibrary>
+  <NoSpaceInLibrary>Il manque une bibliothèque pour ranger le livre une fois terminé.</NoSpaceInLibrary>
   <!--EN: {0_nameDef} is missing basic knowledge on those subjects.-->
   <LacksFundamentalKnowledge>{0_nameDef} manque des connaissances de base sur ces sujets.</LacksFundamentalKnowledge>
   <!--EN: No available weapons to train.-->
-  <NoWeaponsFoundToLearn>Pas d'armes disponible à entraîner?</NoWeaponsFoundToLearn>
+  <NoWeaponsFoundToLearn>Pas d'armes disponible pour s'entraîner</NoWeaponsFoundToLearn>
   <!--EN: {0_nameDef} has no corresponding knowledge or books to learn about {1}.-->
   <MissingRequirementToLearnWeapon>{0_nameDef} n'a pas de connaissances ou de livre pour apprendre {1}.</MissingRequirementToLearnWeapon>
   <!--EN: those weapons-->
